# lam4

./: .gitignore  LICENSE  README.md  cabal.project  hie.yaml
docs/: proposal_normative_constructs_aug26_2024.md  references.md  specification_natural_lang_rendering.md  taking_stock_oct21_2024.md  to_refactor.md
docs/ide/: proposal_ide_nov18_rough.md
examples/: PostfixPredicateApplication.l4  anon_function.l4  arithmetic.l4  atomic_actions_transitive_if_then_infringed.l4  ceiling.l4  chained_record_deref.l4  cons.l4  decimal.l4  floor.l4  foldr_length.l4  for_q_a.l4  fractionals.l4  function_application.l4  functions_with_no_type_annots.l4  heterogeneous.l4  infix_pred_app.l4  integer_to_fraction.l4  let.l4  let2_shadowing.l4  let_backticked_id.l4  life_assured_predicate_fun_decl.l4  list.l4  list2.l4  local_vars_can_be_rules.l4  lottery.l4  nested_let_shadowing.l4  not.l4  predicate_and_fun_decl_with_metadata.l4  predicate_and_givens_variations.l4  simple_atomic_actions_borrower_debt.l4  simple_atomic_actions_with_party_sigs.l4  simple_join_or_record_field_deref.l4  simple_life_assured.l4  unary_minus_integer.l4
experiments/contract-automata/: README.md  contract-automata.cabal
experiments/contract-automata/app/: Main.hs
experiments/contract-automata/src/: Automata.hs  ContractAutomaton.hs  Eval.hs  Examples.hs  Name.hs  Syntax.hs
experiments/data-model/: README.md
experiments/data-model/mini-l4-data-model/: index.html  langium-config.json  langium-quickstart.md  package-lock.json  package.json  tsconfig.monarch.json
experiments/data-model/mini-l4-data-model/examples/: open_sums.l4types  simple.l4types
experiments/data-model/mini-l4-data-model/src/cli/: main.ts
experiments/data-model/mini-l4-data-model/src/extension/: main.ts
experiments/data-model/mini-l4-data-model/src/language/: main-browser.ts  main.ts  mini-l4-types-module.ts  (+2 more)
experiments/data-model/mini-l4-data-model/static/: monacoClassic.html  monacoExtended.html  setup.js  setupClassic.js  setupExtended.js
experiments/gf-grammar/: L4.gf  L4cnc.gf  README.md
experiments/ide-interfaces/l4extensionprototype/: README.md  package.json  pnpm-lock.yaml
experiments/ide-interfaces/l4extensionprototype/scripts/: generateJsonSchema.ts
experiments/ide-interfaces/l4extensionprototype/src/: extension.ts  interfaces.ts
lam4-backend/: CHANGELOG.md  LICENSE  README.md  cabal.project  hie.yaml  lam4-backend.cabal
lam4-backend/app/: Main.hs
lam4-backend/gf-grammar/: Lam4.gf  Lam4.pgf  Lam4Eng.gf  README.md  updateHS.sh
lam4-backend/src/: Base.hs
lam4-backend/src/Base/: Aeson.hs  AesonCombinators.hs  ByteString.hs  File.hs  Grisette.hs  IntMap.hs  NonEmpty.hs  Plated.hs  Text.hs
lam4-backend/src/Lam4/: Main.hs
lam4-backend/src/Lam4/Expr/: AbstractSyntax.hs  CEvalAST.hs  CommonSyntax.hs  ConEvalAST.hs  ConcreteSyntax.hs  ExtractProgramInfo.hs  Name.hs  Parser.hs  Printer.hs  SymEvalAST.hs  ToAST.hs  ToConcreteEvalAST.hs  ToSimala.hs
lam4-backend/src/Lam4/Parser/: Monad.hs  Type.hs
lam4-backend/src/Lam4/Render/: Lam4Gf.hs  Render.hs
lam4-backend/test/: PrinterSpec.hs
lam4-backend/test/testdata/golden/PrinterSpec/: PostfixPredicateApplication.expected  anon_function.expected  arithmetic.expected  ceiling.expected  chained_record_deref.expected  cons.expected  decimal.expected  floor.expected  foldr_length.expected  fractionals.expected  function_application.expected  infix_pred_app.expected  integer_to_fraction.expected  life_assured_predicate_fun_decl.expected  list.expected  list2.expected  lottery.expected  not.expected  predicate_and_givens_variations.expected  simple_join_or_record_field_deref.expected  simple_life_assured.expected  stringlit.expected  unary_minus_integer.expected
lam4-cli/: LICENSE  cabal.project  lam4-cli.cabal
lam4-cli/app/: Base.hs  Main.hs
lam4-frontend/: esbuild.mjs  index.html  langium-config.json  package-lock.json  package.json  tsconfig.json  tsconfig.src.tsbuildinfo
lam4-frontend/examples/: art_union.l4  atomic_actions_transitive_if_then_infringed.l4  chained_record_deref.l4  infix_pred_app.l4  lottery.l4  not.l4  predicate_and_fun_decl_with_metadata.l4  predicate_and_givens_variations.l4  simple_atomic_actions_borrower_debt.l4  simple_atomic_actions_with_party_sigs.l4  simple_join_or_record_field_deref.l4  simple_life_assured.l4
lam4-frontend/src/: utils.ts
lam4-frontend/src/cli/: generator.ts  main.ts
lam4-frontend/src/language/: lam4-json-serializer.ts  lam4-lang-utils.ts  lam4-linker.ts  lam4-module.ts  lam4-scope.ts  lam4-validator.ts  lam4-value-converter.ts  lam4.langium  main.ts
lam4-frontend/src/language/lsp/: config.ts  lam4-document-update-handler.ts  lam4-hover-provider.ts  messages.ts  register-doc-on-validate.ts  update-decision-service-program.ts  update-remote-decision-service-program.ts
lam4-frontend/src/language/remote-decision-service-api/: api.ts  sep25_2024.d.ts
lam4-frontend/src/language/type-system/: infer.ts  type-tags.ts
lam4-frontend/static/: setupClassic.js  setupExtended.js
lam4-frontend/test/parsing/: parsing.test.ts
lam4-frontend/test/validating/: validating.test.ts
lam4-interpreter/: lam4-interpreter.cabal
lam4-parser/: langium-quickstart.md  package-lock.json  package.json  tsconfig.json  tsconfig.monarch.json
lam4-parser/examples/: functionTypeAnnot.l4  function_application.l4  global_facts.l4  infixPredApp.l4  let.l4  open_sums.l4  predicate_and_fun_decl_with_metadata.l4  predicate_and_givens_variations.l4  simple_join_or_record_field_deref.l4  simple_types.l4
lam4-parser/src/: utils.ts
lam4-parser/src/cli/: generator.ts  main.ts
lam4-parser/src/extension/: main.ts
lam4-parser/src/language/: lam4-module.ts  lam4-scope.ts  lam4-validator.ts  lam4.langium  lang-utils.ts  main-browser.ts
lam4-parser/src/language/type-system/: infer.ts  type-tags.ts
lam4-parser/static/: monacoClassic.html  monacoExtended.html  setup.js
lam4-parser/test/linking/: linking.test.ts
lam4-parser/test/parsing/: parsing.test.ts
lam4-parser/test/validating/: validating.test.ts
scripts/: cabal-run-examples.sh
(+9 files in other folders)
