cabal-version:      3.4
name:               lam4-backend

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           Backend for the Lam4 language

license:            MIT
maintainer:         hanyongming@gmail.com

category:           Language
build-type:         Simple

common defaults
  default-language: GHC2021
  ghc-options: -Wall
  default-extensions:
    DerivingStrategies
    DerivingVia
    OverloadedRecordDot
    OverloadedStrings
    OverloadedLabels
    LambdaCase

library
    import:           defaults
    hs-source-dirs:   src
    default-language: GHC2021

    exposed-modules:
        Base
        Base.IntMap
        Base.Map
        Base.NonEmpty
        Base.Plated
        Base.Text
        Base.Aeson
        Base.ByteString
        Base.Grisette
        Lam4.Expr.Name
        Lam4.Expr.ConcreteSyntax
        Lam4.Expr.CommonSyntax
        Lam4.Expr.Parser
        Lam4.Expr.Printer
        Lam4.Parser.Type
        Lam4.Parser.Monad
        Lam4.Expr.ConEvalAST
        Lam4.Expr.ToConcreteEvalAST
        Lam4.Expr.SymEvalAST
        Lam4.Expr.ToSimala
    other-modules:


    build-depends:
        base,
        containers,
        foldable1-classes-compat,
        lens,
        -- just for Control.Lens.Plated
        optics,
        mtl,
        transformers-base,
        prettyprinter,
        text,
        aeson,
        aeson-optics,
        bytestring,
        string-interpolate,
        either,
        pretty-show,
        grisette >= 0.8,
        simala



-- executable lam4-backend

--     import:           defaults
--     main-is:          Main.hs

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     default-language: GHC2021

--     hs-source-dirs:   app
--     build-depends:
--         base,
--         optparse-applicative,
--         bytestring,
--         lam4-backend

test-suite lam4-backend-test
    import:           defaults
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    other-modules:
        PrinterSpec

    -- The interface type and version of the test suite.
    type:
        exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:
      test
    build-tool-depends:
        hspec-discover:hspec-discover
    -- The entrypoint to the test suite.
    main-is:
        Spec.hs

    -- Test dependencies.
    build-depends:
        lam4-backend,
        base,
        hspec,
        hspec-golden,
        pretty-simple,
        filepath,
        directory,
        text,
        bytestring
